[package]
name = "bombcampaign-rust"
version = "0.1.0"
authors = ["Saing Sab <saing.sab@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bombcampaign-rust"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
tokio = "0.2.22"

[dev-dependencies]
reqwest = "0.10.10"
